syntax = "proto3";

package v1;

option go_package = "v1/proto";

message User {
    string id = 1;
    string login = 2;
    string password = 3;
}

message UserList {
    repeated User users = 1;
}

message GetUserResponse {
    User user = 1;
}

message CreateUserResponse {
    string error = 1;
}

message UserRequest {
    string id = 1;
}

message CreateUserRequest {
    string login = 1;
    string password = 2;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}
